--- a/index.html
+++ b/index.html
@@ -1,29 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
-    <title>Fanated</title>
-</head>
-<body>
-    <section id="firstTask">
-        <table>
-            <thead>
-                <tr>
-                  <th scope="col">id</th>
-                  <th scope="col">symbol</th>
-                  <th scope="col">name</th>
-                </tr>
-              </thead>
-              <tbody id="tbody">
-              </tbody>
-        </table>
-    </section>
-    <section id="secondTask">
-    </section>
-    <section id="thirdTask">
-    </section>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./style.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+        <script src="./script.js"></script>
+        <title>Fanated</title>
+    </head>
+    <body>
+        <!-- <section id="firstTask">
+      <h2>1. Список валют</h2>
+      <table>
+        <thead>
+          <tr>
+            <th scope="col">id</th>
+            <th scope="col">symbol</th>
+            <th scope="col">name</th>
+          </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+      </table>
+    </section> -->
+        <section id="secondTask">
+            <h2>2. Макет фигма</h2>
+            <div class="d-grid gap-5">
+                <div class="row d-flex justify-content-around align-items-center">
+                    <div class="col-2">
+                        <img src="./img/лого.png" class="img-fluid" alt="error" />
+                    </div>
+                    <div class="col-5">
+                        <div class="input-group">
+                            <span class="input-group-text" id="basic-addon1">
+                                <i class="bi bi-search"></i>
+                            </span>
+                            <input type="text" class="form-control" placeholder="Поиск..." aria-label="Поиск..." aria-describedby="basic-addon1" />
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="d-grid gap-1 d-flex justify-content-end">
+                            <div class="col">
+                                <button type="button" class="btn btn-outline-warning text-dark rounded-pill accountBtn"><b>Вход</b></button>
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-warning text-dark rounded-pill accountBtn"><b>Регистрация</b></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-around align-items-center">
+                    <div class="col-5">
+                        <button class="btn dropdown-toggle border border-dark" data-bs-toggle="dropdown" aria-expanded="false">Фильтры</button>
+                    </div>
+                    <div class="col-5 d-grid gap-1 d-flex justify-content-end">
+                        <button class="btn dropdown-toggle border border-dark сhevron" data-bs-toggle="dropdown" aria-expanded="false">
+                            По умолчанию <i class="bi bi-chevron-down"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="thirdTask"></section>
+    </body>
 </html>
