--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         ></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
         <script src="./script.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
         <title>Fanated</title>
     </head>
     <body>
@@ -35,31 +38,39 @@
     </section> -->
         <section id="secondTask">
             <h2>2. Макет фигма</h2>
-            <div class="d-grid gap-5">
-                <div class="row d-flex justify-content-around align-items-center">
-                    <div class="col-2">
-                        <img src="./img/лого.png" class="img-fluid" alt="error" />
-                    </div>
-                    <div class="col-5">
-                        <div class="input-group">
-                            <span class="input-group-text" id="basic-addon1">
-                                <i class="bi bi-search"></i>
-                            </span>
-                            <input type="text" class="form-control" placeholder="Поиск..." aria-label="Поиск..." aria-describedby="basic-addon1" />
+            <div class="container d-grid gap-5">
+                <header>
+                    <div class="row d-flex justify-content-around align-items-center">
+                        <div class="col-2">
+                            <img src="./img/лого.png" class="img-fluid" alt="error" />
                         </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="d-grid gap-1 d-flex justify-content-end">
-                            <div class="col">
-                                <button type="button" class="btn btn-outline-warning text-dark rounded-pill accountBtn"><b>Вход</b></button>
-                            </div>
-                            <div class="col">
-                                <button type="button" class="btn btn-warning text-dark rounded-pill accountBtn"><b>Регистрация</b></button>
+                        <div class="col-5">
+                            <div class="input-group">
+                                <span class="input-group-text" id="basic-addon1">
+                                    <i class="bi bi-search"></i>
+                                </span>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Поиск..."
+                                    aria-label="Поиск..."
+                                    aria-describedby="basic-addon1"
+                                />
                             </div>
                         </div>
+                        <div class="col-3">
+                            <div class="d-grid gap-1 d-flex justify-content-end">
+                                <div class="col">
+                                    <button type="button" class="btn btn-outline-warning text-dark rounded-pill accountBtn"><b>Вход</b></button>
+                                </div>
+                                <div class="col">
+                                    <button type="button" class="btn btn-warning text-dark rounded-pill accountBtn"><b>Регистрация</b></button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row d-flex justify-content-around align-items-center">
+                </header>
+                <nav class="row d-flex justify-content-around align-items-center">
                     <div class="col-5">
                         <button class="btn dropdown-toggle border border-dark" data-bs-toggle="dropdown" aria-expanded="false">Фильтры</button>
                     </div>
@@ -68,9 +79,200 @@
                             По умолчанию <i class="bi bi-chevron-down"></i>
                         </button>
                     </div>
+                </nav>
+                <div class="row gap-4">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card rounded-0 gap-2" style="width: 18rem">
+                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
+                                <div class="card-body p-0 d-grid gap-2">
+                                <b class="row m-0 p-0 h3">Без слов</b>
+                                <div class="card border-0">
+                                    <div class="row g-0">
+                                      <div class="col-4">
+                                        <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="...">
+                                      </div>
+                                      <div class="col">
+                                        <div class="card-body p-0 m-0">
+                                          <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
+                                          <h6 class="card-text text-warning"><small>проверено <i class="bi bi-patch-check-fill"></i></small></h6>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="row gap-5 justify-content-between">
+                                    <div class="col-auto">Редкость:</div>
+                                    <div class="col-auto border border-warning border-2 rounded-3" style="margin-right: 10px;">уникальная</div>
+                                  </div>
+                                  <div class="row gap-5 justify-content-between">
+                                    <div class="col-auto">Цена:</div>
+                                    <div class="col-auto rounded-3 align-self-end" id="price" style="margin-right: 10px;">от 500 руб.</div>
+                                  </div>
+                                  <div class="row justify-content-center">
+                                  <button class="col-8 border-0 rounded-5" id="buyBtn">Купить</button>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col"><div class="card rounded-0 gap-2" style="width: 18rem">
+                            <img src="./img/фотка.png" class="card-img-top" alt="..." />
+                            <div class="card-body p-0 d-grid gap-2">
+                            <b class="row m-0 p-0 h3">Без слов</b>
+                            <div class="card border-0">
+                                <div class="row g-0">
+                                  <div class="col-4">
+                                    <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="...">
+                                  </div>
+                                  <div class="col">
+                                    <div class="card-body p-0 m-0">
+                                      <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
+                                      <h6 class="card-text text-warning"><small>проверено <i class="bi bi-patch-check-fill"></i></small></h6>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Редкость:</div>
+                                <div class="col-auto border border-warning border-2 rounded-3" style="margin-right: 10px;">уникальная</div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Цена:</div>
+                                <div class="col-auto rounded-3 align-self-end" id="price" style="margin-right: 10px;">от 500 руб.</div>
+                              </div>
+                              <div class="row justify-content-center">
+                              <button class="col-8 border-0 rounded-5" id="buyBtn">Купить</button>
+                            </div>
+                            </div>
+                        </div></div>
+                        <div class="col"><div class="card rounded-0 gap-2" style="width: 18rem">
+                            <img src="./img/фотка.png" class="card-img-top" alt="..." />
+                            <div class="card-body p-0 d-grid gap-2">
+                            <b class="row m-0 p-0 h3">Без слов</b>
+                            <div class="card border-0">
+                                <div class="row g-0">
+                                  <div class="col-4">
+                                    <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="...">
+                                  </div>
+                                  <div class="col">
+                                    <div class="card-body p-0 m-0">
+                                      <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
+                                      <h6 class="card-text text-warning"><small>проверено <i class="bi bi-patch-check-fill"></i></small></h6>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Редкость:</div>
+                                <div class="col-auto border border-warning border-2 rounded-3" style="margin-right: 10px;">уникальная</div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Цена:</div>
+                                <div class="col-auto rounded-3 align-self-end" id="price" style="margin-right: 10px;">от 500 руб.</div>
+                              </div>
+                              <div class="row justify-content-center">
+                              <button class="col-8 border-0 rounded-5" id="buyBtn">Купить</button>
+                            </div>
+                            </div>
+                        </div></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="card rounded-0 gap-2" style="width: 18rem">
+                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
+                                <div class="card-body p-0 d-grid gap-2">
+                                <b class="row m-0 p-0 h3">Без слов</b>
+                                <div class="card border-0">
+                                    <div class="row g-0">
+                                      <div class="col-4">
+                                        <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="...">
+                                      </div>
+                                      <div class="col">
+                                        <div class="card-body p-0 m-0">
+                                          <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
+                                          <h6 class="card-text text-warning"><small>проверено <i class="bi bi-patch-check-fill"></i></small></h6>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="row gap-5 justify-content-between">
+                                    <div class="col-auto">Редкость:</div>
+                                    <div class="col-auto border border-warning border-2 rounded-3" style="margin-right: 10px;">уникальная</div>
+                                  </div>
+                                  <div class="row gap-5 justify-content-between">
+                                    <div class="col-auto">Цена:</div>
+                                    <div class="col-auto rounded-3 align-self-end" id="price" style="margin-right: 10px;">от 500 руб.</div>
+                                  </div>
+                                  <div class="row justify-content-center">
+                                  <button class="col-8 border-0 rounded-5" id="buyBtn">Купить</button>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col"><div class="card rounded-0 gap-2" style="width: 18rem">
+                            <img src="./img/фотка.png" class="card-img-top" alt="..." />
+                            <div class="card-body p-0 d-grid gap-2">
+                            <b class="row m-0 p-0 h3">Без слов</b>
+                            <div class="card border-0">
+                                <div class="row g-0">
+                                  <div class="col-4">
+                                    <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="...">
+                                  </div>
+                                  <div class="col">
+                                    <div class="card-body p-0 m-0">
+                                      <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
+                                      <h6 class="card-text text-warning"><small>проверено <i class="bi bi-patch-check-fill"></i></small></h6>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Редкость:</div>
+                                <div class="col-auto border border-warning border-2 rounded-3" style="margin-right: 10px;">уникальная</div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Цена:</div>
+                                <div class="col-auto rounded-3 align-self-end" id="price" style="margin-right: 10px;">от 500 руб.</div>
+                              </div>
+                              <div class="row justify-content-center">
+                              <button class="col-8 border-0 rounded-5" id="buyBtn">Купить</button>
+                            </div>
+                            </div>
+                        </div></div>
+                        <div class="col"><div class="card rounded-0 gap-2" style="width: 18rem">
+                            <img src="./img/фотка.png" class="card-img-top" alt="..." />
+                            <div class="card-body p-0 d-grid gap-2">
+                            <b class="row m-0 p-0 h3">Без слов</b>
+                            <div class="card border-0">
+                                <div class="row g-0">
+                                  <div class="col-4">
+                                    <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="...">
+                                  </div>
+                                  <div class="col">
+                                    <div class="card-body p-0 m-0">
+                                      <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
+                                      <h6 class="card-text text-warning"><small>проверено <i class="bi bi-patch-check-fill"></i></small></h6>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Редкость:</div>
+                                <div class="col-auto border border-warning border-2 rounded-3" style="margin-right: 10px;">уникальная</div>
+                              </div>
+                              <div class="row gap-5 justify-content-between">
+                                <div class="col-auto">Цена:</div>
+                                <div class="col-auto rounded-3 align-self-end" id="price" style="margin-right: 10px;">от 500 руб.</div>
+                              </div>
+                              <div class="row justify-content-center">
+                              <button class="col-8 border-0 rounded-5" id="buyBtn">Купить</button>
+                            </div>
+                            </div>
+                        </div></div>
+                    </div>
                 </div>
             </div>
         </section>
         <section id="thirdTask"></section>
+        <footer></footer>
     </body>
 </html>
