--- a/index.html
+++ b/index.html
@@ -139,12 +139,15 @@
                     <p id="footer_company">@ tnft.ru Company, Inc</p>
                 </div>
             </footer>
+            <div id="circle_1"></div>
+            <div id="circle_2"></div>
+            <div id="circle_3"></div>
         </section>
 
         <h2>3. Форма регистрации</h2>
-        <section id="thirdTask" style="display: flex; justify-content: center; margin-bottom: 200px;">
+        <section id="thirdTask" style="margin-bottom: 200px;">
             
-            <form id="registrationForm">
+            <form id="registrationForm" style="width: max-content;">
                 <div class="inputGroup">
                 <label for="firstName">Имя:</label><br>
                 <input type="text" id="firstName" name="firstName" class="formInput"><br>
